Milestone 4 - poprawki. Nadal niedokonczony. Nie kompiluje...

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -29,9 +29,11 @@ Aby zapewnić, że pozyskane w badaniach dane są prawidłowe, w proponowanym ro
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
-Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest kwestia zachęty studentów i absolwentów do korzystania z nowego systemu ankietowania. Popularność całego systemu zależy w głównej mierze właśnie od tego, jakie materiały będą za jego pośrednictwem udostępniane oraz jakie będą warunki uzyskania dostępu do nich. Kolejnym ograniczeniem jest wyznaczony z góry termin zakończenia prac. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Uzupełniając tę kwestię o fakt braku wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych, spełnienie wszystkich wymagań związanych z projektem może okazać się utrudnione. \\
+Największym ograniczeniem, a zarazem zagrożeniem dla całego projektu jest kwestia zachęty studentów i absolwentów do korzystania z nowego systemu ankietowania. Popularność całego systemu zależy w głównej mierze właśnie od tego, jakie materiały będą za jego pośrednictwem udostępniane oraz jakie będą warunki uzyskania dostępu do nich. \\
 
-Ostatecznie jednak, kwestia zachęty dla respondentów -- choć istotna dla powodzenia systemu w przyszłości -- w fazie tworzenia może być potraktowana jako poboczna. Kwestię ograniczonego czasu można natomiast nadrobić, stosując odpowiednie metody zarządzania czasem. Największym zagrożeniem pozostaje więc brak wcześniejszego doświadczenia w tego typu projektach. \\
+Rozpatrując jednak tę kwestię ze strony implementacyjnej, sporym zagrożeniem okazuje się wymaganie stosowania rozwiązań ,,otwartych'' i ,,wolnych'', ograniczające spektrum możliwych do wykorzystania technologii i zasobów. W tej kategorii, za poważne ograniczenie należałoby także uznać wyznaczony z góry termin zakończenia prac. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Uzupełniając tę kwestię o fakt braku wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych, spełnienie wszystkich wymagań związanych z projektem może okazać się utrudnione. \\
+
+Ostatecznie jednak, kwestia zachęty dla respondentów -- choć istotna dla powodzenia systemu w przyszłości -- w fazie tworzenia może być potraktowana jako poboczna. Kwestię ograniczonego czasu można natomiast nadrobić, stosując odpowiednie metody zarządzania czasem. Największym zagrożeniem pozostaje więc brak wcześniejszego doświadczenia w tego typu projektach oraz ograniczenia dotyczące możliwych do zastosowania technologii. \\
 
 \section{Cele projektu}
 \label{Chapter13}
