--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -6,7 +6,7 @@
 
 Skład zespołu pracującego nad projektem został przedstawiony w tablicy \ref{tab:roster}.
 
-\begin{table}[h]
+\begin{table}[H]
 \centering
 \begin{tabular}{ | c | c | }
 \hline
