--- a/thesis/06-2-Technologie-MT.tex
+++ b/thesis/06-2-Technologie-MT.tex
@@ -1,4 +1,4 @@
 \subsection{JavaScript}
-\label{Chapter635}
+\label{Chapter63b}
 
 Formularze wymagające częstej interakcji z klientem, np. formularz umożliwiający tworzenie nowej ankiety, oraz funkcje związane z walidacją pól uzupełnianych przez klienta zostały napisane w \emph{JavaScript}. Obsługa strony po stronie użytkownika zapobiega frustracji, związanej z częstym przeładowywaniem całej strony, co ogranicza zarówno obciążenie łącza po stronie serwera, jak i po stronie klienta.
