--- a/thesis/11DodatkiB.tex
+++ b/thesis/11DodatkiB.tex
@@ -1,4 +1,4 @@
 \chapter{Wygląd aplikacji}
 \label{Chapterb1}
 
-%Dodatek opcjonalny, tutaj można zamieścić jakieś zrzuty ekranu czy inne materiały dotyczące interfejsu. Jeżeli nie chcecie tego dodatku, zakomentujecie załączenie tego pliku w \texttt{thesis-bachelor-polski.tex}.
+{\color{red}Tu będą zrzuty ekranowe z systemu iQuest, zamieszczone w instrukcji. Na chwilę obecną, zrzuty są dopiero wykonywane (trwają prace nad systemem).}
