--- a/thesis/12DodatkiC.tex
+++ b/thesis/12DodatkiC.tex
@@ -1,4 +1,9 @@
 \chapter{Schemat bazy danych}
 \label{Chapterc1}
 
-%Dodatek opcjonalny, tutaj można zamieścić schematy bazy danych, jeśli nie zmieścił się w rozdziale o architekturze. Może być też tak, że będziecie mieli legen-czekaj-darny schemat o formacie A3 i będziecie go osobno drukować i wklejać w tym miejscu. Jeżeli nie chcecie tego dodatku, zakomentujecie załączenie tego pliku w \texttt{thesis-bachelor-polski.tex}.
+\begin{landscape}
+\begin{figure}[th]
+\centering\includegraphics[height=\textheight, width=\textwidth]{figures/iQuest_Database}
+\caption{Diagram Bazy Danych}\label{rys:iQuest_DataBase}
+\end{figure}
+\end{landscape}
