Wnioski LW + wersje programow + wnioski globalne

--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -122,6 +122,8 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 \begin{itemize}
 \item Logika
 \item Testy jednostkowe (wydanie 2)
+\item System raportowania
+\item Obsługa Bazy Danych
 \end{itemize}
 \noindent
 
@@ -134,32 +136,36 @@ Serdeczne podziękowania należą się zespołowi zarządzającemu, przygotowane
 \label{ChapterA4}
 
 \begin{itemize}
-\item Apache
-\item bash
-\item CheckPoint SNX
-\item CRON
-\item Eclipse IDE
-\item git
-\item gPHPEdit
-\item JasperReports Designer
-\item JasperReports Server
-\item Java
+\item Apache (2.2.22)
+\item bash (4.2.37)
+\item Check Point's Linux SNX (800007027)
+\item Chrome (24.0)
+\item cron (3.0)
+\item Eclipse IDE (3.7.2)
+\item FastStone Capture (5.3)
+\item Git (1:1.7.10.4)
+\item JasperReports Studio (1.3.2)
+\item JasperReports Server (5.0.1)
+\item Java (1.6.0\_38)
 \item JavaScript
-\item JetBrains PhpStorm
-\item Kazam Screencaster
-\item meld
-\item Moodle
-\item MySQL
-\item PHP
-\item PHPUnit
-\item PostgreSQL
+\item JetBrains PhpStorm (5.0.4)
+\item Kazam Screencaster (1.0.6)
+\item meld (1.6.0)
+\item Moodle (2.3.1)
+\item Mozilla Firefox (18.0.1)
+\item MySQL (14.14)
+\item PHP (> 5.3)
+\item PHPUnit (3.6.10)
+\item psql (9.1.7)
+\item PostgreSQL (9.1)
+\item recordMyDesktop (0.3.8.1)
 \item Redmine
-\item Selenium
-\item SSH
-\item SVN
-\item TexLive
-\item TexMaker
-\item Zend PHP Developer Tools for Eclipse IDE
+\item Selenium IDE (1.10.0)
+\item SSH (1:6.0)
+\item SVN (1.7.5)
+\item TexLive (20120611)
+\item TexMaker (3.4)
+\item Zend PHP Developer Tools for Eclipse IDE (3.0.2)
 \end{itemize}
 
 \section{Zawartość płyty CD}
